Bug 1966357 - Wrap the usage of an image on a media query to appease browser_parsable_css.
UltraBlame original commit: 142fd805474cd0d2410ffbd6ca62b1e784cbb891

--- a/browser/themes/shared/preferences/applications.css
+++ b/browser/themes/shared/preferences/applications.css
@@ -218,6 +218,17 @@ menu
 -
 icon
 {
+media
+not
+(
+-
+moz
+-
+platform
+:
+linux
+)
+{
 content
 :
 url
@@ -239,6 +250,7 @@ png
 "
 )
 ;
+}
 media
 (
 -
